# firstpass

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  example.env  firstpass-openapi.json  hello.py  pyproject.toml  pytest.ini  test_vault.py  vault.py
.github/workflows/: main.yaml
app/: main.py
client/python/: README.md
firstpass/: __init__.py  __main__.py  api_config.py  api_vault.py  cli.py  secrets.py  vault.py
firstpass/lib/: config.py  exceptions.py  secrets.py  vault.py
firstpass/utils/: __init__.py  config.py  exceptions.py  vault.py
tests/: test_app.py  test_secrets.py  test_vault.py
tests/e2e/: __init__.py  conftest.py  test_firstpass_cli.py  test_firstpass_cli_cloud.py  test_firstpass_cli_local.py
tests/firstpass/lib/: test_secrets.py  test_vault.py
tests/firstpass/utils/: test_config.py  test_secrets.py  test_vault.py
tests/integration/: test_cloud_vault.py
