[project]
name = "firstpass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43.0.3",
    "fastapi[standard]>=0.115.4",
    "httpx>=0.27.2",
    "passlib>=1.7.4",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.2",
    "pyjwt>=2.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "pre-commit>=4.0.1",
]
