[project]
name = "firstpass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43.0.3",
    "pyaml>=24.9.0",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.2",
    "pyperclip>=1.9.0",
    "typer>=0.12.5",
    "firstpass-client",
]

[project.scripts]
firstpass = "firstpass.__main__:app"

[tool.setuptools]
packages = ["firstpass"]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "pre-commit>=4.0.1",
    "types-pyyaml>=6.0.12.20240917",
]

[tool.uv.sources]
firstpass-client = { git = "https://github.com/daniel-salmon/firstpass-client", rev = "6d07c30" }
